@@ -2,6 +2,8 @@ Changelog for Writer2LaTeX version 1.0 -> 1.2
 
 ---------- version 1.1.8 ----------
 
+[w2x] Implemented the option separate_stylesheet to separate the style sheet from the XHTML files (has no effect on EPUB export)
+
 [all] Added Catalan translation from Martí Ruiz-Altaba
 
 [all] Image files are now extracted with proper file extension, even if the ODF manifest contains no media type
